--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -35,7 +35,7 @@ div[id="root"] {
   padding: 0;
   height: 100%;
   width: 100%;
-  font-family: $default-font, Arial, Helvetica, sans-serif;
+  font-family: $default-font, sans-serif;
   background-color: $color-white;
   color: $color-black;
   border: 0;
