--- a/src/assets/styles/_fonts.scss
+++ b/src/assets/styles/_fonts.scss
@@ -1,5 +1,12 @@
 @font-face {
   font-family: 'IBM';
+  src: url('../fonts/IBMPlexSans-Light.ttf');
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'IBM';
   src: url('../fonts/IBMPlexSans-Regular.ttf');
   font-style: normal;
   font-weight: 400;
