--- a/src/containers/Main/BuyBlock/components/BuyInfo/styles.module.scss
+++ b/src/containers/Main/BuyBlock/components/BuyInfo/styles.module.scss
@@ -23,6 +23,7 @@
 @include forDesktopMiddle {
   .blockInfo, .container {
     width: 100%;
+    margin-right: 0;
   }
 }
 
@@ -30,6 +31,7 @@
 @include forDesktopSm {
   .container {
     width: 100%;
+    margin: 0;
   }
   .blockInfo {
     display: none;
