--- a/src/containers/Main/BuyBlock/components/CryptoAssets/styles.module.scss
+++ b/src/containers/Main/BuyBlock/components/CryptoAssets/styles.module.scss
@@ -48,14 +48,14 @@
 
 @include forTablet {
   .cryptoLabel {
-    width: 75px;
+    width: 70px;
     height: 30px;
     margin: 0 3px;
     img {
-      width: 25px;
+      width: 20px;
     }
     p {
-      margin-top: 5px;
+      margin-bottom: 5px;
     }
   }
 }
