--- a/src/containers/Main/BuyBlock/components/BuyCrat/styles.module.scss
+++ b/src/containers/Main/BuyBlock/components/BuyCrat/styles.module.scss
@@ -53,7 +53,6 @@
 @include forDesktopSm {
   .container {
     padding: 5px;
-    line-height: 10px;
   }
 
   .container .select {
@@ -64,6 +63,10 @@
 }
 
 @include forTablet {
+  .container .select {
+    line-height: 10px;
+  }
+
   .balance {
     height: 70px;
     width: unset;
