--- a/src/containers/Layout/styles.module.scss
+++ b/src/containers/Layout/styles.module.scss
@@ -15,7 +15,7 @@
   padding-bottom: 45px;
 
   flex: 1 0 auto;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: $color-white;
   & > * {
     margin-bottom: $cellSpacing;
