--- a/src/containers/NotificationModals/styles.module.scss
+++ b/src/containers/NotificationModals/styles.module.scss
@@ -5,6 +5,7 @@
   width: 600px;
   background: linear-gradient(218.82deg, rgba(23, 144, 68, 0.2) -3.31%, rgba(255, 255, 255, 0.2) 89.97%), #FFFFFF;
   box-shadow: 0px 10px 40px rgba(34, 34, 34, 0.1);
+  border-radius: 20px;
 }
 
 .blackText {
@@ -17,8 +18,22 @@
   width: 120px;
   height: 120px;
   border-radius: 50%;
+  @include flexbox;
+  flex-direction: column;
 }
 
 .instructions {
   margin-top : 20px;
+}
+
+.againBtn {
+  @include flexbox;
+  width: 250px;
+  height: 60px;
+  margin: 30px auto 0;
+  text-transform: uppercase;
+}
+
+.pending {
+  @include rotateAnimation;
 }
