--- a/src/assets/fonts/fontello/css/fontello-codes.css
+++ b/src/assets/fonts/fontello/css/fontello-codes.css
@@ -33,6 +33,7 @@
 .icon-exit:before { content: '\e82a'; } /* '' */
 .icon-heart:before { content: '\e899'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-linkedin:before { content: '\f0e1'; } /* '' */
 .icon-wallet:before { content: '𐼖'; } /* '\10f16' */
 .icon-instagram:before { content: '𘚞'; } /* '\1869e' */
 .icon-twitter:before { content: '𘚟'; } /* '\1869f' */
