--- a/src/assets/fonts/fontello/css/fontello.css
+++ b/src/assets/fonts/fontello/css/fontello.css
@@ -1,12 +1,12 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?42988730');
-  src: url('../font/fontello.eot?42988730#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?42988730') format('woff2'),
-       url('../font/fontello.woff?42988730') format('woff'),
-       url('../font/fontello.ttf?42988730') format('truetype'),
-       url('../font/fontello.svg?42988730#fontello') format('svg');
+  src: url('../font/fontello.eot?47076153');
+  src: url('../font/fontello.eot?47076153#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?47076153') format('woff2'),
+       url('../font/fontello.woff?47076153') format('woff'),
+       url('../font/fontello.ttf?47076153') format('truetype'),
+       url('../font/fontello.svg?47076153#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -16,7 +16,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?42988730#fontello') format('svg');
+    src: url('../font/fontello.svg?47076153#fontello') format('svg');
   }
 }
 */
@@ -88,6 +88,7 @@
 .icon-exit:before { content: '\e82a'; } /* '' */
 .icon-heart:before { content: '\e899'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-linkedin:before { content: '\f0e1'; } /* '' */
 .icon-wallet:before { content: '𐼖'; } /* '\10f16' */
 .icon-instagram:before { content: '𘚞'; } /* '\1869e' */
 .icon-twitter:before { content: '𘚟'; } /* '\1869f' */
