--- a/src/containers/Main/PresalePlan/components/PresaleSlide/styles.module.scss
+++ b/src/containers/Main/PresalePlan/components/PresaleSlide/styles.module.scss
@@ -21,7 +21,7 @@
 .lineBreak {
   opacity: 0.44;
   border: 1px solid $color-black;
-  width: 100%;
+  width: 800px;
   &.active {
     border-color: $color-white;
   } 
