--- a/src/containers/Main/RoadMap/components/RoadMapSegment/styles.module.scss
+++ b/src/containers/Main/RoadMap/components/RoadMapSegment/styles.module.scss
@@ -8,7 +8,7 @@
   &:before {
     position: absolute;
     content: '';
-    width: 100%;
+    width: 800px;
     height: 2px;
     background: $color-light-green-200;
     top: 20px;
